Prod-EU/force-app/main/default/objects/Content_Metadata__c/Content_Metadata__c.object-meta.xml
<CustomObject>
    <description>Object stores the metadata information about the file, which was uploaded</description>
    <label>Content Metadata</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>