Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the Account to which the file was linked</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Content Metadata</relationshipLabel>
    <relationshipName>Content_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>