Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description>Stores the ContentDocumentId of the file, which was uploaded</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>