Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Content_Size__c.field-meta.xml
<CustomField>
    <fullName>Content_Size__c</fullName>
    <description>Records the content size of the document</description>
    <label>Size</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>