Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Document_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Document_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who created the document</description>
    <label>Document Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Content_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>