Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Document_Created_By_User__c.field-meta.xml
<CustomField>
    <fullName>Document_Created_By_User__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
    <label>Document Created By User</label>
    <type>Text</type>
</CustomField>