Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Document_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Created_Date__c</fullName>
    <description>Created date of the document</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Created Date</label>
    <type>DateTime</type>
</CustomField>