Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>This field tracks the document type to classify the documents.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empf</fullName>
            </value>
            <value>
                <fullName>VO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>