Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/File_Extension__c.field-meta.xml
<CustomField>
    <fullName>File_Extension__c</fullName>
    <description>Stores the file extension of the file, which was uploaded</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Extension</label>
    <length>40</length>
    <type>Text</type>
</CustomField>