Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <description>Stores the file type, which was uploaded</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>