Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Latest_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Latest_Content_Version_Id__c</fullName>
    <description>Latest content version for the document.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>