Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Linked_Objects__c.field-meta.xml
<CustomField>
    <fullName>Linked_Objects__c</fullName>
    <description>Field displays the Objects a particular document is linked</description>
    <formula>IF(AND (Account__c != NULL, Opportunity__c = NULL, Order__c = NULL), &apos;Account&apos;, 
IF(AND (Account__c != NULL, Opportunity__c != NULL, Order__c = NULL), &apos;Account, Opportunity&apos;, 
IF(AND (Account__c != NULL, Opportunity__c != NULL, Order__c != NULL), &apos;Account, Opportunity, Order&apos;, 
IF(AND (Account__c = NULL, Opportunity__c != NULL, Order__c = NULL), &apos;Opportunity&apos;, 
IF(AND (Account__c = NULL, Opportunity__c != NULL, Order__c != NULL), &apos;Opportunity, Order&apos;,
IF(AND (Account__c = NULL, Opportunity__c = NULL, Order__c != NULL), &apos;Order&apos;, &apos;&apos;
))))))</formula>
    <label>Linked Objects</label>
    <type>Text</type>
</CustomField>