Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity to which the file is associated</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Content Metadata</relationshipLabel>
    <relationshipName>Content_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>