Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Opportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account__c</fullName>
    <description>Account Id tied to Opportunity</description>
    <formula>CASESAFEID(Opportunity__r.AccountId)</formula>
    <label>Opportunity Account</label>
    <type>Text</type>
</CustomField>