Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order to which the file is associated</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Content Metadata</relationshipLabel>
    <relationshipName>Content_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>