Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Order_Account__c.field-meta.xml
<CustomField>
    <fullName>Order_Account__c</fullName>
    <description>Account tied to the Order</description>
    <formula>CASESAFEID(Order__r.AccountId)</formula>
    <label>Order Account</label>
    <type>Text</type>
</CustomField>