Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Owned_By_User__c.field-meta.xml
<CustomField>
    <fullName>Owned_By_User__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned By User</label>
    <type>Text</type>
</CustomField>