Prod-EU/force-app/main/default/objects/Content_Metadata__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Records the document source</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Source</valueSetName>
    </valueSet>
</CustomField>