Prod-EU/force-app/main/default/objects/Content_Metadata__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>Content_Size__c</columns>
    <columns>Source__c</columns>
    <columns>Owned_By_User__c</columns>
    <columns>Document_Created_By__c</columns>
    <columns>Document_Created_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Order__c</columns>
    <columns>Linked_Objects__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>